# GEN-SYS-PDF-Extractor-

./: .gitignore  LICENSE  README.md  boilerplate_line_patterns.json  pipeline.py  pyproject.toml  reflow_token_fixes.json  requirements.txt
sr_pipeline/: __init__.py  authors.py  classifier.py  cleaner.py  exporter.py  extractor.py  llm_normalize.py  pipeline.py  segmenter.py
